src/app/landing-page/landing-page.component.scss
/* ... */
.carousel {
    background-color: #FFFFFF;
}

.case-1,
.case-2,
.case-3 {
    background-position: center center;
    background-repeat: no-repeat;
    background-size: cover;
}

.case-1 {
    background-image: url('../../assets/images/case1.jpg');
    width: 100%;
    height: 350px;
}

.case-2 {
    background-image: url('../../assets/images/case2.jpg');
    width: 100%;
    height: 350px;
}

.case-3 {
    background-image: url('../../assets/images/case3.jpg');
    width: 100%;
    height: 350px;
}

.drag-scroll-wrapper,
.drag-scroll-content,
drag-scroll {
    height: 300px !important;
    a {
        display: flex;
        transition: .3s;
        position: relative;
    }
}

.box-case-bg {
    position: absolute;
    left: 0;
    top: 0;
    width: 100%;
    z-index: 1;
    background-color: rgba(67, 122, 190, .35);
    height: 100%;
}

.box-case {
    width: 30%;
    min-height: 200px;
    position: absolute;
    left: 5%;
    top: 5%;
    background-color: #fff;
    box-shadow: 0 0 5px #c3c3c3;
    box-sizing: border-box;
    padding: 1% 3%;
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    flex-direction: column;
    z-index: 2;
    ::-webkit-scrollbar {
        width: 5px;
    }
    /* Track */
    ::-webkit-scrollbar-track {
        background: #f1f1f1;
    }
    /* Handle */
    ::-webkit-scrollbar-thumb {
        background: #888;
        border-radius: 10px;
    }
    /* Handle on hover */
    ::-webkit-scrollbar-thumb:hover {
        background: #555;
    }
    .logo-product {
        width: 100%;
        height: 60px;
        background-position: center center;
        background-repeat: no-repeat;
        background-size: 75%;
        &.gv {
            background-image: url('../../assets/products/gv/gv-logo.png');
        }
        &.gt {
            background-image: url('../../assets/products/gt/gt-logo.png');
        }
        &.ge {
            background-image: url('../../assets/products/ge/ge-logo.png');
        }
    }
    p {
        font-size: 13.5px;
        white-space: normal;
        font-weight: lighter;
        margin: 5px auto 0 auto;
        padding: 0 10px;
        box-sizing: border-box;
    }
    span {
        display: block;
        margin: 0px auto 5px auto;
        font-style: italic;
        font-weight: 500;
        color: #333;
        font-size: 1.1em;
    }
    ul {
        list-style: none;
        margin: 0;
        padding: 0;
        display: flex;
        width: 30%;
        justify-content: space-around;
        li {
            width: 10px;
            height: 10px;
            border-radius: 50%;
            background-color: rgba(0, 0, 0, .3);
            &.active {
                background-color: $default;
            }
        }
    }
}

@media (min-width: 991px) {
    .box-case {
        &.box-case-gv {
            top: 50%;
            height: 225px;
            margin-top: -112.5px;
            padding-top: 10px;
            padding-bottom: 10px;
        }
    }
}
/* ... */

